--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
-  "name": "@ucfopen/matching",
+  "name": "last-chance-cadet",
   "materia": {
-    "cleanName": "matching"
+    "cleanName": "last-chance-cadet"
   },
-  "version": "1.1.2",
+  "version": "2.0.0",
+  "private": true,
+  "main": "app.js",
   "dependencies": {
     "materia-widget-development-kit": "^2.0.0"
   },
@@ -14,34 +16,14 @@
   },
   "scripts": {
     "start": "webpack-dev-server",
-    "build": "webpack -p",
     "build-dev": "webpack",
-    "test": "TZ='America/New_York' jest --verbose",
-    "test-ci": "TZ='America/New_York' CI=true jest --ci --useStderr --coverage --coverageReporters text-summary cobertura"
-  },
-  "jest": {
-    "coverageReporters": [
-      "text",
-      "lcov"
-    ],
-    "verbose": false,
-    "transform": {
-      "^.+\\.coffee$": "<rootDir>/node_modules/jest-coffee-preprocessor/index.js"
-    },
-    "moduleFileExtensions": [
-      "coffee",
-      "js"
-    ],
-    "collectCoverageFrom": [
-      "src/**/*.{js,coffee}"
-    ],
-    "coverageThreshold": {
-      "global": {
-        "branches": 85,
-        "functions": 97,
-        "lines": 97
-      }
-    }
+    "build": "webpack -p",
+    "pretest": "npm run buildDev",
+    "test": "karma start ./karma.conf.js --no-auto-watch --single-run",
+    "pretest-full": "npm run buildDev",
+    "test-full": "karma start ./karma-full.conf.js",
+    "clientAssets:link": "cd ../materia-client-assets && yarn link && cd - && yarn link materia-client-assets",
+    "devKit:link": "cd ../materia-widget-development-kit && yarn link && cd - && yarn link materia-widget-development-kit"
   },
 
   "license": "AGPL-3.0",
