--- a/src/install.yaml
+++ b/src/install.yaml
@@ -1,6 +1,6 @@
 ---
 general:
-  name: Matching
+  name: Last Chance Cadet
   group: Materia
   height: 600
   width: 800
@@ -17,7 +17,7 @@ files:
   flash_version: 0
 score:
   is_scorable: Yes
-  score_module: Matching
+  score_module: LastChanceCadet
 meta_data:
   features:
     - Customizable
