This tunnel must end somewhere.

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "build": "webpack -p",
     "pretest": "npm run buildDev",
     "test": "karma start ./karma.conf.js --no-auto-watch --single-run",
-    "pretest-full": "npm run buildDev",
+    "pretest-full": "npm run build-dev",
     "test-full": "karma start ./karma-full.conf.js",
     "clientAssets:link": "cd ../materia-client-assets && yarn link && cd - && yarn link materia-client-assets",
     "devKit:link": "cd ../materia-widget-development-kit && yarn link && cd - && yarn link materia-widget-development-kit"
