#1 Replaced all screen shots, replaced 'class' with 'ng-class' which actually works outside of the dev environment, fixed score module reference, brought dev demo back into parity with regular demo.

--- a/src/install.yaml
+++ b/src/install.yaml
@@ -17,7 +17,7 @@ files:
   flash_version: 0
 score:
   is_scorable: Yes
-  score_module: LastChanceCadet
+  score_module: Matching
 meta_data:
   features:
     - Customizable
