--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
     "cleanName": "last-chance-cadet"
   },
   "version": "2.0.0",
-  "private": true,
-  "main": "app.js",
   "dependencies": {
+    "angular": "~1.5.0",
+    "angular-animate": "~1.5.0",
+    "angular-loader": "~1.5.0",
+    "angular-mocks": "~1.5.0",
+    "angular-route": "~1.5.0",
+    "angular-sanitize": "~1.5.0",
     "materia-widget-development-kit": "^2.0.0"
   },
   "devDependencies": {
