Added ucfopen namespacing to package name.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "last-chance-cadet",
+  "name": "@ucfopen/last-chance-cadet",
   "materia": {
     "cleanName": "last-chance-cadet"
   },
