--- a/src/install.yaml
+++ b/src/install.yaml
@@ -15,6 +15,8 @@ files:
   creator: creator.html
   player: player.html
   flash_version: 0
+  creator_guide: guides/creator.html
+  player_guide: guides/player.html
 score:
   is_scorable: Yes
   score_module: Matching
