audiocontrol changes, install.yaml, keyboard instructions, and screanreader updates for choices

--- a/src/install.yaml
+++ b/src/install.yaml
@@ -37,3 +37,4 @@ meta_data:
     Students must match one set of words or
     phrases to a corresponding word, phrase,
     or definition.
+accessibility_keyboard: Full
