made page navigation arrows into buttons

--- a/src/install.yaml
+++ b/src/install.yaml
@@ -38,3 +38,4 @@ meta_data:
     phrases to a corresponding word, phrase,
     or definition.
 accessibility_keyboard: Full
+accessibility_reader: Full
