--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   },
   "version": "2.0.5",
   "dependencies": {
-    "materia-widget-development-kit": "2.5.2"
+    "materia-widget-development-kit": "../../MWDK4"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.0",
@@ -13,9 +13,9 @@
     "jest-coffee-preprocessor": "^1.0.0"
   },
   "scripts": {
-    "start": "webpack-dev-server",
-    "build": "webpack -p",
-    "build-dev": "webpack",
+    "start": "mwdk-start",
+    "build": "mwdk-build-prod",
+    "build-dev": "mwdk-build-dev",
     "test": "TZ='America/New_York' jest --verbose",
     "test-ci": "TZ='America/New_York' CI=true jest --ci --useStderr --coverage --coverageReporters text-summary cobertura"
   },
