--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   },
   "version": "2.0.5",
   "dependencies": {
-    "materia-widget-development-kit": "../../MWDK4"
+    "materia-widget-development-kit": "~3.0.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.0",
