--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "materia-widget-development-kit": "~3.0.0"
   },
   "devDependencies": {
+    "angular": "1.6.9",
     "angular-mocks": "~1.5.0",
     "jest": "^23.6.0",
     "jest-coffee-preprocessor": "^1.0.0"
