--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   },
   "version": "2.1.0",
   "dependencies": {
-    "materia-widget-development-kit": "~3.0.2"
+    "materia-widget-development-kit": "3.0.4"
   },
   "devDependencies": {
     "angular": "1.6.9",
